Remove tota11y.js and fix link text wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -233,6 +233,8 @@ a:active {
   border: 5px solid #1d2731;
   border-radius: 8px;
   padding: 0 6px 0 6px;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .logo {
